--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="./output.css" rel="stylesheet">
     <title>Weather</title>
-    <link rel="icon" type="image/x-icon" href="../assets/favicon.png">
+    <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/Ritushree12/weather-images/refs/heads/main/favicon.png">
 </head>
 
 <body class="min-h-screen w-full ">
